fix => redimension mobile

--- a/app/Portal.Consultoras.Web/Content/Css/Mobile/RevistaDigital/RedimensionLandingRD.css
+++ b/app/Portal.Consultoras.Web/Content/Css/Mobile/RevistaDigital/RedimensionLandingRD.css
@@ -1,5 +1,8 @@
 ﻿.content_item_home_palanca {
     margin-bottom: 30px;
+    min-width: 20%;
+    margin: 0 1% 2% 1%;
+    max-width: 25%;
 }
 
 .box_producto_mobile_fix {
@@ -7,38 +10,5 @@
     margin-right: 0 !important;
 }
 
-@media screen and (min-width:320px) and (max-width:735px) {
 
-    .content_item_home_palanca {
-        width: 48%;
-        margin-right: 4%;
-    }
-
-        .content_item_home_palanca:nth-child(2n) {
-            margin-right: 0;
-        }
-}
-
-@media screen and (min-width:736px) and (max-width:940px) {
-
-    .content_item_home_palanca {
-        width: 31%;
-        margin-right: 3.5%;
-    }
-
-        .content_item_home_palanca:nth-child(3n) {
-            margin-right: 0;
-        }
-}
-
-@media screen and (min-width:941px) {
-
-    .content_item_home_palanca {
-        width: 23%;
-        margin-right: 2.6%;
-    }
-
-        .content_item_home_palanca:nth-child(4n) {
-            margin-right: 0;
-        }
-}
+   
